Revision history for OpenTelemetry-SDK

{{$NEXT}}

0.026     2025-05-05 21:50:19+01:00 Europe/London

    * Move away from OpenTelemetry::logger, which is being deprecated.

0.025     2024-12-21 10:23:35+00:00 Europe/London

    * Marked OpenTelemetry::Exporter::OTLP as a dependency instead
      of a recommended distribution. Since OTLP is the default
      exporter for the SDK, it doesn't make sense to ship without it.
      The reason it was released as a separate distribution was
      initially because it depended on Google::ProtocolBuffers::Dynamic,
      but now it doesn't: it will use that distribution if it is
      available but use JSON otherwise.
    * BREAKING CHANGE: the SDK will now die if it encounters an error
      during initialisation. This will only affect the code executed
      during import. Once the SDK has been loaded, it will never
      intentionally raise an exception.
    * Add 'isa' as a dependency and reduce the minimum supported Perl
      version to 5.30. If you are running 5.30 please consider installing
      Type::Tiny::XS which should improve the performance of these 'isa'
      checks.

0.024     2024-08-02 15:28:11+01:00 Europe/London

    * Use bigfloat instead of bignum in TraceIDRatioBased sampler
      to avoid complications in other code relying on Math::BigInt
      and friends. This adds a dependency on Math::BigInt 0.65.
      See GH #16.

0.023001  2024-07-18 10:38:35+01:00 Europe/London (TRIAL RELEASE)

    * Add a `process` method to the Simple and Batch span processors
      to prepare for an upcoming change to the API to support
      OpenTelemetry logs. Their `on_end` methods now are thin wrappers
      to these new methods.

0.022     2024-04-19 11:46:54+01:00 Europe/London

    * Do not call start on the background function in the batch span
      processor, this is handled automatically by the loop (GH #13)

0.021     2023-12-03 14:46:29+00:00 Europe/London
