@@ -5,7 +5,7 @@ requires 'IO::Async::Loop';
 requires 'Metrics::Any';
 requires 'Mutex';
 requires 'Object::Pad', '0.74'; # For //= field initialisers
-requires 'OpenTelemetry', '0.010';
+requires 'OpenTelemetry', '0.030'; # For internal_logger
 requires 'OpenTelemetry::Exporter::OTLP';
 requires 'bigfloat', '0.65'; # Pragma added in Math::BigInt 0.65
 
